# cat-feeder

./: .gitignore  CMakeLists.txt  README_GPIO_COMPATIBILITY.md  cat-feeder.service  install_service.sh  notes.txt  remove_service.sh  start.sh  status.sh  stop.sh
include/: GPIO_Pi4.h  MarlinController.h  SSD1306.h
src/: GPIO_Pi4.cpp  MarlinController.cpp  SSD1306.cpp  main.cpp
web_api/: README.md  app.py  cat-feeder-web.service  disable_service.sh  install_service.sh  setup_pi4.sh  start.sh
